// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddBoard Component matches snapshot in add mode 1`] = `
<DocumentFragment>
  <div>
    <form>
      <div
        class="mb-4"
      >
        <div
          class="w-full"
        >
          <label
            class="block text-sm font-medium  mb-1"
            for="name"
          >
            Board Name
            <span
              class="text-red-500"
            >
              *
            </span>
          </label>
          <input
            class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:border-blue-300 border-gray-300 w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:border-blue-300"
            id="name"
            name="name"
            placeholder="Enter name"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="flex flex-1/2 justify-end"
      >
        <div
          class="mx-0.5"
        >
          <button
            class=" bg-indigo-500 hover:bg-indigo-600 text-white font-bold py-2 px-3 rounded focus:outline-none focus:shadow-outline"
            type="submit"
          >
            <div
              class="flex items-center justify-center gap-2"
            >
              <span>
                Save
              </span>
            </div>
          </button>
        </div>
        <div
          class="mx-0.5"
        >
          <button
            class=" bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-3 rounded focus:outline-none focus:shadow-outline"
            type="button"
          >
            <div
              class="flex items-center justify-center gap-2"
            >
              <span>
                Cancel
              </span>
            </div>
          </button>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`AddBoard Component matches snapshot in edit mode 1`] = `
<DocumentFragment>
  <div>
    <form>
      <div
        class="mb-4"
      >
        <div
          class="w-full"
        >
          <label
            class="block text-sm font-medium  mb-1"
            for="name"
          >
            Edit Board
            <span
              class="text-red-500"
            >
              *
            </span>
          </label>
          <input
            class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:border-blue-300 border-gray-300 w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:border-blue-300"
            id="name"
            name="name"
            placeholder="Enter name"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="flex flex-1/2 justify-end"
      >
        <div
          class="mx-0.5"
        >
          <button
            class=" bg-indigo-500 hover:bg-indigo-600 text-white font-bold py-2 px-3 rounded focus:outline-none focus:shadow-outline"
            type="submit"
          >
            <div
              class="flex items-center justify-center gap-2"
            >
              <span>
                Save
              </span>
            </div>
          </button>
        </div>
        <div
          class="mx-0.5"
        >
          <button
            class=" bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-3 rounded focus:outline-none focus:shadow-outline"
            type="button"
          >
            <div
              class="flex items-center justify-center gap-2"
            >
              <span>
                Cancel
              </span>
            </div>
          </button>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
